Fix overflow links

--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ h3 {
 
 a {
     color: #2d3c49;
+    word-wrap:break-word;
 }
 
 header {
